--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
       </header>
       <main>
         <section>
+          <section class="backdrop"></section>
           <div class="section banner bg-imagen">
               <h1>SOLUCIONES EFICACES PARA </br>SU NEGOCIO</h1>
               <button type="button" class="btn-service">
