--- a/portafolio.html
+++ b/portafolio.html
@@ -98,19 +98,21 @@
           <ul class="filter-items">
             <li>
               <a href="#" class="filter-link">
-                <img
-                  class="filter-imagen"
-                  src="./images/members.jpg"
-                  alt="sitio web de Tecnoduck"
+                <div class="filter-frame"> 
+                  <img
+                  class="filter-imagen" src="./images/members.jpg" alt="sitio web de Tecnoduck"
                   width="370"
-                  height="294"
-                />
+                  height="294" />
+                  <p class=overlay>Tecnoduck es una plataforma de distribución de coronavirus de última generación. Las compañías usan esta plataforma para el espionaje digital y los ataques a los servidores seguros de la competencia.</p>
+                 </div>
+               
                 <h2 class="filter-title">Tecnoduck</h2>
                 <p class="filter-text">Sitio-web</p>
               </a>
             </li>
             <li>
               <a href="#" class="filter-link">
+                <div class="filter-frame">
                 <img
                   class="filter-imagen"
                   src="./images/poster.jpg"
@@ -118,6 +120,8 @@
                   width="370"
                   height="294"
                 />
+                <p class="overlay">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta neque harum eligendi nulla nobis, cum at sint est sit totam, error aperiam! Non illo rem perferendis autem, magni ipsum harum.</p>
+                </div>
                 <h2 class="filter-title">
                   Póster de Nueva Orleans vs Estrella Dorada
                 </h2>
@@ -126,6 +130,7 @@
             </li>
             <li>
               <a href="#" class="filter-link">
+                <div class="filter-frame">
                 <img
                   class="filter-imagen"
                   src="./images/seafood.jpg"
@@ -133,12 +138,15 @@
                   width="370"
                   height="294"
                 />
+                <p class="overlay">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta neque harum eligendi nulla nobis, cum at sint est sit totam, error aperiam! Non illo rem perferendis autem, magni ipsum harum.</p>
+              </div>
                 <h2 class="filter-title">Restaurante Seafood</h2>
                 <p class="filter-text">Aplicaciones</p>
               </a>
             </li>
             <li>
               <a href="#" class="filter-link">
+                <div class="filter-frame">
                 <img
                   class="filter-imagen"
                   src="./images/earphone.jpg"
@@ -146,12 +154,15 @@
                   width="370"
                   height="294"
                 />
+                <p class="overlay">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta neque harum eligendi nulla nobis, cum at sint est sit totam, error aperiam! Non illo rem perferendis autem, magni ipsum harum.</p>
+              </div>
                 <h2 class="filter-title">Proyecto Prime</h2>
                 <p class="filter-text">Marketing</p>
               </a>
             </li>
             <li>
               <a href="#" class="filter-link">
+                <div class="filter-frame">
                 <img
                   class="filter-imagen"
                   src="./images/boxes.jpg"
@@ -159,12 +170,15 @@
                   width="370"
                   height="294"
                 />
+                <p class="overlay">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta neque harum eligendi nulla nobis, cum at sint est sit totam, error aperiam! Non illo rem perferendis autem, magni ipsum harum.</p>
+              </div>
                 <h2 class="filter-title">Proyecto Cajas</h2>
                 <p class="filter-text">Aplicaciones</p>
               </a>
             </li>
             <li>
               <a href="#" class="filter-link">
+                <div class="filter-frame">
                 <img
                   class="filter-imagen"
                   src="./images/inspiration.jpg"
@@ -172,12 +186,15 @@
                   width="370"
                   height="294"
                 />
+                <p class="overlay">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta neque harum eligendi nulla nobis, cum at sint est sit totam, error aperiam! Non illo rem perferendis autem, magni ipsum harum.</p>
+              </div>
                 <h2 class="filter-title">La inspiración no tiene límites</h2>
                 <p class="filter-text">Sitio-web</p>
               </a>
             </li>
             <li>
               <a href="#" class="filter-link">
+                <div class="filter-frame">
                 <img
                   class="filter-imagen"
                   src="./images/limited-edition.jpg"
@@ -185,12 +202,15 @@
                   width="370"
                   height="294"
                 />
+                <p class="overlay">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta neque harum eligendi nulla nobis, cum at sint est sit totam, error aperiam! Non illo rem perferendis autem, magni ipsum harum.</p>
+                </div>
                 <h2 class="filter-title">Edición Limitada</h2>
                 <p class="filter-text">Diseño</p>
               </a>
             </li>
             <li>
               <a href="#" class="filter-link">
+                <div class="filter-frame">
                 <img
                   class="filter-imagen"
                   src="./images/lab-proyect.jpg"
@@ -198,12 +218,15 @@
                   width="370"
                   height="294"
                 />
+                <p class="overlay">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta neque harum eligendi nulla nobis, cum at sint est sit totam, error aperiam! Non illo rem perferendis autem, magni ipsum harum.</p>
+                </div>
                 <h2 class="filter-title">Proyecto LAB</h2>
                 <p class="filter-text">Marketing</p>
               </a>
             </li>
             <li>
               <a href="#" class="filter-link">
+                <div class="filter-frame">
                 <img
                   class="filter-imagen"
                   src="./images/growing-business.jpg"
@@ -211,6 +234,8 @@
                   width="370"
                   height="294"
                 />
+                <p class="overlay">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta neque harum eligendi nulla nobis, cum at sint est sit totam, error aperiam! Non illo rem perferendis autem, magni ipsum harum.</p>
+                </div>
                 <h2 class="filter-title">Negocio en Crecimiento</h2>
                 <p class="filter-text">Aplicaciones</p>
               </a>
